# projet_datalake

./: .gitignore  .gitkeep  README.md  hello.py  my_data.json  pyproject.toml  result_glassdoor.json
TD_DATALAKE/DATALAKE/99_METADATA/: metadata_technique.csv
projet_datalake/: assets.py  definitions.py  dev MEL.py  dev.py  dev_bahareh.py  metadata.py  panda_emp.py
projet_datalake/data/: Lieu.csv  dim_entreprise.csv  dim_lieu.csv  dim_temps.csv  dim_texte_avis.csv  fait_avis_glassdoor.csv  fait_emplois_linkedin.csv  jk_recommandations.csv
projet_datalake/working/: avis.py  emplois.py  lieu.py
